--- a/html/projects.html
+++ b/html/projects.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">shihjen</div>
+            <div class="logo">twenty2</div>
             
             <div class="menu-toggle" id="menuToggle">☰</div> 
 
