--- a/html/view.html
+++ b/html/view.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <div class="logo">shihjen</div>
+            <div class="logo">twenty2</div>
             
             <div class="menu-toggle" id="menuToggle">☰</div> 
 
