--- a/html/article-detail.html
+++ b/html/article-detail.html
@@ -26,9 +26,9 @@
     </header>
 
     <main class="article-detail">
-        <div id="article-content-container">
+        <article class="article-content" id="article-content-container">
             <p>Loading article content...</p>
-        </div>
+        </article>
     </main>
 
     <footer>
