--- a/html/articles.html
+++ b/html/articles.html
@@ -65,9 +65,9 @@
                 
                 link.innerHTML = `
                     <h3>${article.title}</h3>
-                    <p style="color: var(--text-light); margin-bottom: 0.5rem; font-size: 0.95rem;">
-                        ${article.excerpt}...
-                    </p>
+                        <p style="color: var(--text-light); margin-bottom: 0.5rem; font-size: 0.95rem;">
+                            Click to read full article →
+                        </p>
                     <small>Published: ${article.date}</small>
                 `;
                 
