--- a/html/article-detail.html
+++ b/html/article-detail.html
@@ -26,8 +26,9 @@
     </header>
 
     <main class="article-detail">
-        <article class="article-content" id="article-content-container">
-            <p>Loading article content...</p>
+        <article class="article-content">
+            <div class="article-meta" id="article-meta"></div>
+            <div id="article-content-container"></div>
         </article>
     </main>
 
