--- a/html/article-detail.html
+++ b/html/article-detail.html
@@ -65,6 +65,14 @@
                     // 5. Insert the HTML into the container
                     contentContainer.innerHTML = htmlContent;
 
+                    // ---- Reading time ----
+                    const text = contentContainer.innerText || '';
+                    const words = text.trim().split(/\s+/).length;
+                    const minutes = Math.max(1, Math.ceil(words / 200));
+                    
+                    const meta = document.getElementById('article-meta');
+                    meta.innerHTML = `⏱️ ${minutes} min read`;
+
                     // OPTIONAL: Extract the title from the first H1 tag in the rendered content 
                     // and update the page title for better SEO/UX.
                     const firstH1 = contentContainer.querySelector('h1');
