--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="html/experience.html">Experience</a></li>
                 <li><a href="html/projects.html">Projects</a></li>
                 <li><a href="html/articles.html">Articles</a></li>
+                <li><a href="html/news.html">AI News</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
         </nav>
